--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -522,3 +522,26 @@ dataSources:
         - event: DarkSwapWithdraw(bytes32,uint256,address,bytes32,address)
           handler: handleDarkSwapWithdraw
       file: ./src/dark-swap-asset-manager.ts
+  - kind: ethereum
+    name: TheDeepVaultAssetManager
+    network: mainnet
+    source:
+      address: "0x9D8946A8A0c5a583Bf05bE83B981406182ac9d2f"
+      abi: TheDeepVaultAssetManager
+      startBlock: 21626960
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - TheDeepDeposit
+        - TheDeepWithdrawal
+      abis:
+        - name: TheDeepVaultAssetManager
+          file: ./abis/TheDeepVaultAssetManager.json
+      eventHandlers:
+        - event: TheDeepDeposit(address,bytes32,bytes32,uint256,address)
+          handler: handleTheDeepDeposit
+        - event: TheDeepWithdrawal(bytes32,address[2],uint256[2],bytes32[2],bytes32[2])
+          handler: handleTheDeepWithdrawal
+      file: ./src/the-deep-vault-asset-manager.ts
