--- a/subgraph-arbitrum.yaml
+++ b/subgraph-arbitrum.yaml
@@ -19,7 +19,6 @@ dataSources:
         - Deposit
         - Join
         - JoinSplit
-        - OwnershipTransferred
         - Split
         - Transfer
         - Withdraw
@@ -33,8 +32,6 @@ dataSources:
           handler: handleJoin
         - event: JoinSplit(bytes32,bytes32,bytes32,bytes32)
           handler: handleJoinSplit
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
         - event: Split(bytes32,bytes32,bytes32)
           handler: handleSplit
         - event: Transfer(bytes32,uint256,address,bytes32,bytes32)
@@ -54,14 +51,11 @@ dataSources:
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
-        - UniswapSwapAssetManagerOwnershipTransferred
         - UniswapSwap
       abis:
         - name: UniswapSwapAssetManager
           file: ./abis/UniswapSwapAssetManager.json
       eventHandlers:
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
         - event: UniswapSwap(address,uint256,bytes32,bytes32,bytes32)
           handler: handleUniswapSwap
       file: ./src/uniswap-swap-asset-manager.ts
@@ -77,7 +71,6 @@ dataSources:
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
-        - UniswapLiquidityAssetManagerOwnershipTransferred
         - UniswapCollectFees
         - UniswapLiquidityProvision
         - UniswapRemoveLiquidity
@@ -85,8 +78,6 @@ dataSources:
         - name: UniswapLiquidityAssetManager
           file: ./abis/UniswapLiquidityAssetManager.json
       eventHandlers:
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
         - event: UniswapCollectFees(uint256,address[2],uint256[2],bytes32[2],bytes32[2])
           handler: handleUniswapCollectFees
         - event: UniswapLiquidityProvision(uint256,bytes32,bytes32[2],uint256[2],bytes32[2],bytes32[2])
@@ -107,7 +98,6 @@ dataSources:
       language: wasm/assemblyscript
       entities:
         - Locked
-        - StakingAssetManagerOwnershipTransferred
         - Unlocked
       abis:
         - name: StakingAssetManager
@@ -115,8 +105,6 @@ dataSources:
       eventHandlers:
         - event: Locked(address,address,address,uint256,bytes32,bytes32,bytes32)
           handler: handleLocked
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
         - event: Unlocked(address,address,uint256,bytes32,bytes32,bytes32)
           handler: handleUnlocked
       file: ./src/staking-asset-manager.ts
@@ -132,15 +120,12 @@ dataSources:
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
-        - SablierLinearAssetManagerOwnershipTransferred
         - SablierClaimStream
         - SablierCreateStream
       abis:
         - name: SablierLinearAssetManager
           file: ./abis/SablierLinearAssetManager.json
       eventHandlers:
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
         - event: SablierClaimStream(bytes32,address,uint256,bytes32,bytes32)
           handler: handleSablierClaimStream
         - event: SablierCreateStream(address,address,uint256[],bytes32[],bytes32[])
@@ -158,15 +143,12 @@ dataSources:
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
-        - SablierDynamicAssetManagerOwnershipTransferred
         - SablierDynamicAssetManagerSablierClaimStream
         - SablierDynamicAssetManagerSablierCreateStream
       abis:
         - name: SablierDynamicAssetManager
           file: ./abis/SablierDynamicAssetManager.json
       eventHandlers:
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
         - event: SablierClaimStream(bytes32,address,uint256,bytes32,bytes32)
           handler: handleSablierClaimStream
         - event: SablierCreateStream(address,address,uint256[],bytes32[],bytes32[])
@@ -186,7 +168,6 @@ dataSources:
       entities:
         - NftTransfer
         - NftWithdraw
-        - NftAssetManagerOwnershipTransferred
       abis:
         - name: NftAssetManager
           file: ./abis/NftAssetManager.json
@@ -195,8 +176,6 @@ dataSources:
           handler: handleNftTransfer
         - event: NftWithdraw(bytes32,uint256,address,address)
           handler: handleNftWithdraw
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
       file: ./src/nft-asset-manager.ts
   - kind: ethereum
     name: OTCSwapAssetManager
@@ -210,37 +189,31 @@ dataSources:
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
-        - OTCSwapAssetManagerOwnershipTransferred
         - Swap
       abis:
         - name: OTCSwapAssetManager
           file: ./abis/OTCSwapAssetManager.json
       eventHandlers:
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
         - event: Swap(bytes32,bytes32,bytes32,bytes32)
           handler: handleSwap
       file: ./src/otc-swap-asset-manager.ts
   - kind: ethereum
-    name: GeneralDefiIntegrationAssetManager
+    name: TransferAssetManager
     network: arbitrum-one
     source:
-      address: "0x2e4f46038E998663Bf8E907817B02C05Ada65BD7"
-      abi: GeneralDefiIntegrationAssetManager
-      startBlock: 239264172
+      address: "0xC486e448e068A888AF09c386337E3C3C4812569b"
+      abi: TransferAssetManager
+      startBlock: 365820080
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
-        - DefiIntegration
-        - GeneralDefiIntegrationAssetManagerOwnershipTransferred
+        - TransferAssetManagerTransfer
       abis:
-        - name: GeneralDefiIntegrationAssetManager
-          file: ./abis/GeneralDefiIntegrationAssetManager.json
+        - name: TransferAssetManager
+          file: ./abis/TransferAssetManager.json
       eventHandlers:
-        - event: DefiIntegration(address,bytes32[],bytes32[],uint256[],bytes32[])
-          handler: handleDefiIntegration
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
-      file: ./src/general-defi-integration-asset-manager.ts
+        - event: Transfer(bytes32,bytes32,bytes32)
+          handler: handleTransfer
+      file: ./src/transfer-asset-manager.ts
