--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "create-local": "graph create --node http://localhost:8020/ singularity",
     "remove-local": "graph remove --node http://localhost:8020/ singularity",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 singularity",
-    "test": "graph test"
+    "test": "graph test",
+    "update-networks": "node update-networks.js"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.68.5",
